# artus

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CMake/: slang.cmake
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Include/Artus/Core/: Logger.h  Platform.h  Window.h
Engine/Core/Include/Core/: Platform.h
Engine/Core/Source/Apple/: Platform.mm  Window.mm
Engine/Core/Source/Windows/: Window.cpp
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/Include/Artus/Graphics/: Device.h  Enums.h  Flags.h  Structs.h  Surface.h
Engine/Graphics/Include/Artus/Graphics/RHI/: IDevice.h  ISurface.h
Engine/Graphics/Include/Artus/Graphics/RHI/Resources/: IBindGroup.h  IBindGroupLayout.h  IBuffer.h  ICommandAllocator.h  ICommandEncoder.h  IGraphicsPipeline.h  IImage.h  IImageView.h  IPipelineLayout.h  IShader.h
Engine/Graphics/Include/Artus/Graphics/RHI/Types/: Common.h  Format.h  Geometry.h  Rendering.h
Engine/Graphics/Include/Artus/Graphics/Resources/: Buffer.h  CommandAllocator.h  CommandEncoder.h  DescriptorAllocator.h  DescriptorSet.h  DescriptorSetLayout.h  GraphicsPipeline.h  Image.h  ImageView.h  PipelineLayout.h  Shader.h
Engine/Graphics/Include/Artus/Graphics/Types/: Common.h  Geometry.h  Rendering.h
Engine/Graphics/Include/Artus/Graphics/Utils/Metal/: Layer.h
Engine/Graphics/Include/Artus/Graphics/Utils/Vulkan/: Allocator.h
Engine/Graphics/Include/Artus/Graphics/Vulkan/: Device.h  Surface.h
Engine/Graphics/Include/Artus/Graphics/Vulkan/Resources/: BindGroup.h  BindGroupLayout.h  Buffer.h  CommandAllocator.h  CommandEncoder.h  DescriptorAllocator.h  DescriptorSet.h  DescriptorSetLayout.h  GraphicsPipeline.h  Image.h  ImageView.h  PipelineLayout.h  Shader.h
Engine/Graphics/Include/Artus/Graphics/Vulkan/Types/: Format.h
Engine/Graphics/Include/Artus/Graphics/Vulkan/Utils/Common/: Common.h  Format.h  Pipeline.h
Engine/Graphics/Include/Artus/Graphics/Vulkan/Utils/Metal/: Layer.h
Engine/Graphics/Include/Artus/Graphics/Vulkan/Utils/Vulkan/: Allocator.h
Engine/Graphics/Source/: Device.cpp  Surface.cpp
Engine/Graphics/Source/Resources/: Buffer.cpp  CommandAllocator.cpp  CommandEncoder.cpp  DescriptorAllocator.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  GraphicsPipeline.cpp  Image.cpp  ImageView.cpp  PipelineLayout.cpp  Shader.cpp
Engine/Graphics/Source/Utils/Metal/: Layer.mm
Engine/Graphics/Source/Utils/Vulkan/: Allocator.cpp
Engine/Graphics/Source/Vulkan/: Device.cpp  Surface.cpp
Engine/Graphics/Source/Vulkan/Resources/: BindGroup.cpp  BindGroupLayout.cpp  Buffer.cpp  CommandAllocator.cpp  CommandEncoder.cpp  DescriptorAllocator.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  GraphicsPipeline.cpp  Image.cpp  ImageView.cpp  PipelineLayout.cpp  Shader.cpp
Engine/Graphics/Source/Vulkan/Utils/Metal/: Layer.mm
Engine/Graphics/Source/Vulkan/Utils/Vulkan/: Allocator.cpp
Engine/Math/: CMakeLists.txt
Engine/Math/Include/Artus/Math/: Color.h  Matrix4.h  Quaternion.h  Utilities.h  Vector2.h  Vector3.h
Engine/Rendering/: CMakeLists.txt
Engine/Rendering/Include/Artus/Rendering/: Material.h  MaterialGroup.h  RenderContext.h  RenderDevice.h
Engine/Rendering/Include/Artus/Rendering/Utils/: GraphicsAllocator.h  ResourceAllocator.h
Engine/Rendering/Source/: RenderContext.cpp  RenderDevice.cpp
Engine/Rendering/Source/Utils/: GraphicsAllocator.cpp
Runtime/: Main.cpp
Runtime/Resources/Shaders/: Default.slang  DefaultMesh_ps.slang  DefaultMesh_vs.slang  DefaultSkybox.slang  FullscreenQuad.slang  GeometryUtils.slang  PS_Default.slang  PS_Skybox.slang  ShaderTypes.slang  VS_Default.slang  VS_Fullscreen.slang  VertexTypes.slang
Runtime/Resources/Shaders/Utils/: Camera.slang  FullscreenQuad.slang  Model.slang  Vertex.slang
Runtime/Source/: Main.cpp
